--- a/app/assets/stylesheets/prendas.scss
+++ b/app/assets/stylesheets/prendas.scss
@@ -61,7 +61,7 @@ img {
   margin: 10px;
 }
 
-.prenda unit h3 a {
+.prenda-unit h3 a {
   font-size: 25px;
   text-align: center;
   text-transform: capitalize;
