--- a/app/views/prendas/show.html.erb
+++ b/app/views/prendas/show.html.erb
@@ -2,7 +2,7 @@
 <div class="prenda-card">
   <div class="prenda-data">
     <h2><%= @prenda.descripcion %></h2>
-    <h5>Categoría: <%= @prenda.categoria %></h5>
+<!--    <h5>Categoría: <%#= @prenda.categoria %></h5>-->
     <h5>Material: <%= @prenda.material %></h5>
     <h5>Color primario: <%= @prenda.color_primario %></h5>
     <h5>Color secundario: <%= @prenda.color_secundario %></h5>
