--- a/app/assets/stylesheets/atuendos.scss
+++ b/app/assets/stylesheets/atuendos.scss
@@ -1,3 +1,296 @@
-// Place all the styles related to the atuendos controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #4e0d3a;
+  font-size: 10px;
+}
+
+ul,ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+}
+
+#atuendos{
+  width:100vw;
+  padding-top: 40px;
+  padding-bottom: 90px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  background-color: rgb(243,199,214);
+  text-transform: uppercase;
+}
+.btn-go-back-guardarropa a{
+  display: inline-block;
+  color: #FFFF;
+  background-color: #4e0d3a;
+  padding: 15px 20px ;
+  font-size: 10px;
+  text-transform: uppercase;
+  margin: 5%;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.atuendos-title {
+  font-size: 3.8em;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
+  color: #4e0d3a;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+}
+
+.text-no-atuendo{
+  font-size: 2.5em;
+  text-align: center;
+  color: #e30425;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 10%;
+}
+
+.atuendos-all {
+  margin: 30px 20px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-bottom: 0;
+}
+
+.atuendo-unit {
+  padding: 10px 15px;
+  margin: 8% 6%;
+  text-align: start;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.atuendo-unit h3{
+  font-size: 28px;
+  padding: 0;
+}
+
+.atuendo-actions-btn{
+  font-size: 25px;
+  margin: 9% 4%;
+}
+
+.atuendo-details-container{
+  text-transform: capitalize;
+  font-size: 1.4em;
+  margin-bottom: 5%;
+}
+
+.prendas-from-atuendos-container{
+  margin-top: 10%;
+  text-transform: capitalize;
+}
+
+.prenda-only-one{
+  display: flex;
+  //justify-content: space-between;
+  flex-direction: column;
+}
+
+.prenda-only-one-icons a{
+  color: #4e0d3a;
+}
+
+
+.btn-atuendo-add{
+  text-align: justify;
+  margin: 0 10%;
+}
+.btn-atuendo-add a{
+
+  display: inline-block;
+  color: #4e0d3a;
+  padding: 15px 34px ;
+  font-size: 12px;
+  text-transform: uppercase;
+  margin: 30px;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  border: medium solid #4e0d3a;
+}
+
+.atuendo-li-unit{
+
+  text-transform: capitalize;
+  color: #4e0d3a;
+  font-family: 'Roboto', sans-serif;
+  margin-bottom: 5%;
+}
+
+#atuendo-new{
+  width:100vw;
+  padding-top: 15px;
+  padding-bottom: 90px;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+  background-color: rgb(243,199,214);
+  text-transform: uppercase;
+}
+
+.form-atuendo-new{
+  margin: 0 3% 0 3%;
+}
+.atuendos-form-items {
+  width: 100%;
+  margin-bottom: 9px;
+  padding: 15px;
+  box-sizing: border-box;
+  outline: none;
+  font-family: 'Roboto', sans-serif;
+  position: relative;
+
+}
+
+.btn-random{
+  display: inline-block;
+  color: #4e0d3a;
+  background-color: #e30425;
+  padding: 15px 20px ;
+  font-size: 15px;
+  text-transform: uppercase;
+  margin: auto 32%;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+
+.atuendos-form-title{
+  font-size: 15px;
+  color: #4e0d3a;
+  margin-bottom: 9px;
+  //padding: 0px 15px 10px 15px;
+  text-transform: capitalize;
+
+
+}
+
+.form-atuendo-new div{
+  margin-top: 7%;
+}
+
+.weatherWidget {
+  display: none;
+
+}
+
+
+@media (min-width:650px) {
+  .btn-go-back-guardarropa a{
+    font-size: 15px;
+
+
+  }
+
+  .text-no-atuendo{
+    font-size: 4em;
+  }
+
+  .btn-atuendo-add a{
+    font-size: 18px;
+    margin: 30px 80%;
+
+  }
+
+  .atuendo-details-container{
+
+    font-size: 2em;
+    margin: 0px 51% 0 1%;
+  }
+  .atuendo-unit h3{
+    font-size: 34px;
+    padding: 0;
+  }
+
+  .atuendo-actions-btn{
+    margin: 6% 4%;
+    font-size: 30px;
+  }
+  .atuendo-actions-btn a{
+    color: #4e0d3a;
+  }
+
+  .prendas-all-details-container{
+    //display: flex;
+    //justify-content: space-around;
+    //flex-direction: column;
+    //margin: 0 12%;
+
+  }
+
+  .prendas-from-atuendos-container{
+    margin: 3% 3%;
+    font-size: 15px;
+  }
+
+}
+
+@media(min-width:1200px) {
+.btn-go-back-guardarropa a{
+  font-size: 19px;
+  margin: 3%;
+
+}
+.atuendos-title {
+  font-size: 5em;
+}
+
+  .text-no-atuendo{
+    margin-top: 5%;
+  margin-bottom:3%;
+  }
+
+.btn-atuendo-add a{
+  font-size: 18px;
+  margin: 30px 42%;
+
+}
+
+  .atuendos-all{
+    justify-content: space-evenly;
+  }
+
+  .atuendo-unit h3{
+    font-size: 6em;
+  }
+
+  .atuendo-actions-btn{
+    margin: 11% 4%;
+
+  }
+  .atuendo-details-container{
+    font-size: 3.5em;
+  }
+
+  .prendas-all-details-container h4{
+    font-size: 20px;
+  }
+
+  .prendas-from-atuendos-container{
+    font-size: 20px;
+  }
+
+  .weatherWidget {
+    display: block;
+
+  }
+}
