--- a/app/views/atuendos/_prenda.html.erb
+++ b/app/views/atuendos/_prenda.html.erb
@@ -1,14 +1,25 @@
-<div style="background-color: blanchedalmond;">
-  <div>
-      <%=prenda.descripcion %>
-      <%=prenda.categoria %>
+<div class="prendas-from-atuendos-container">
+  <div class="prenda-only-one">
+    <span> Descripción:
+       <%=prenda.descripcion %>
+    </span>
+
+<!--    <span>Categoría:-->
+      <%#=prenda.categoria %>
+<!--    </span>-->
+    <span> Material:
       <%=prenda.material %>
+    </span>
+    <span>Color primario:
       <%= prenda.color_primario %>
+    </span>
+    <span>Color secundario:
       <%= prenda.color_secundario %>
+    </span>
 
-
+    <div class="prenda-only-one-icons">
       <%= link_to "", { :controller => :prendas, :action => :edit, id: prenda.id }, { class: "fa fa-pencil fa-fw"} %>
       <%= link_to "", prenda, method: :delete, :class =>"fa fa-times no-underline" , data: { confirm: '¿Está seguro que queres borrar la prenda?' }%>
-
+    </div>
   </div>
 </div>
