--- a/app/views/atuendos/new.html.erb
+++ b/app/views/atuendos/new.html.erb
@@ -1,20 +1,20 @@
 <%= render 'header'%>
-<div style="background-color: blanchedalmond;">
+<div id="atuendo-new">
     <div>
-
-      <h2><a href="/guardarropas/<%=+params[:guardarropa_id]%>">Guardarropa</a></h2>
+      <h2 class="btn-go-back-guardarropa"><a href="/guardarropas/<%=+params[:guardarropa_id]%>">Guardarropa</a></h2>
 
       <div>
-        <div>
-          <h2>Creación de atuendos</h2>
+        <div class="form-atuendo-new">
+          <h2 class="atuendos-title">Crea un atuendos</h2>
+
           <%= form_for @atuendo , :url => { :action => "create" } do |f| %>
             <div>
-              <%= f.label :nombre %>
-              <%= f.text_field :nombre, class: 'form-items' %>
+              <%= f.label :nombre , class: 'atuendos-form-title'%>
+              <%= f.text_field :nombre, class: 'atuendos-form-items' %>
             </div>
             <div>
               <div>
-                <h3>Cabeza</h3>
+                <h3 class="atuendos-form-title">Cabeza</h3>
 
                 <% if @prendas_cabeza.blank?  %>
                   <div>
@@ -35,7 +35,7 @@
                 <%end%>
               </div>
               <div>
-                <h3>Torso</h3>
+                <h3 class="atuendos-form-title">Torso</h3>
                 <% if @prendas_torso.blank? %>
                   <div>
                     <span><i class="fa fa-meh-o"></i> No hay prendas de este tipo</span>
@@ -54,7 +54,7 @@
                 <%end%>
               </div>
               <div>
-                <h3>Piernas</h3>
+                <h3 class="atuendos-form-title">Piernas</h3>
                 <% if @prendas_piernas.blank?  %>
                   <div>
 
@@ -72,7 +72,7 @@
                 <%end%>
               </div>
               <div>
-                <h3>Pies</h3>
+                <h3 class="atuendos-form-title">Pies</h3>
                 <% if @prendas_pies.blank?  %>
                   <div>
                     <span><i class="fa fa-meh-o"></i> No hay prendas de este tipo</span>
@@ -91,7 +91,7 @@
             </div>
 
             <div>
-              <%= f.label :puntaje %><br />
+              <%= f.label :puntaje, class: 'atuendos-form-title' %><br />
               <fieldset>
                 <%= f.radio_button :puntaje, 5 , {id: "star5"}%> <%= label_tag(:star5, "5 ⭐️") %>
                 <%=f.radio_button :puntaje, 4, {id: "star4"} %> <%= label_tag(:star4, "4 ⭐") %>
@@ -102,21 +102,21 @@
             </div>
             <div>
               <div>
-                <%= f.label :estacion_tag %><br />
-                <%= f.select(:estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a),{required:false, :prompt => "seleccione"}, {:class => 'form-items'})%>
+                <%= f.label :estacion_tag, class: 'atuendos-form-title' %><br />
+                <%= f.select(:estacion_tag, options_for_select(Atuendo.estacion_tags.keys.to_a),{required:false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
               </div>
               <div>
-                <%= f.label :tiempo_tag %><br />
-                <%= f.select(:tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'form-items'})%>
+                <%= f.label :tiempo_tag, class: 'atuendos-form-title' %><br />
+                <%= f.select(:tiempo_tag, options_for_select(Atuendo.tiempo_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
               </div>
               <div>
-                <%= f.label :ocasion_tag %><br />
-                <%= f.select(:ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'form-items'})%>
+                <%= f.label :ocasion_tag, class: 'atuendos-form-title' %><br />
+                <%= f.select(:ocasion_tag, options_for_select(Atuendo.ocasion_tags.keys.to_a),{required: false, :prompt => "seleccione"}, {:class => 'atuendos-form-items'})%>
               </div>
             </div>
             <div>
               <div>
-                <%= f.label :descripcion %> <%= f.text_area(:descripcion, {:class => 'form-items'}) %>
+                <%= f.label :descripcion, class: 'atuendos-form-title' %> <%= f.text_area(:descripcion, {:class => 'form-items'}) %>
               </div>
 
             </div>
