--- a/app/views/guardarropas/_guardarropa.html.erb
+++ b/app/views/guardarropas/_guardarropa.html.erb
@@ -1,10 +1,5 @@
-<div>
-  <div>
-    <div><%= guardarropa.nombre %></div>
-    <div>
-      <%= link_to "", { :controller => :guardarropas, :action => :edit, id: guardarropa.id }, { class: "fa fa-pencil fa-fw"} %>
-      <%= link_to "", { :controller => :guardarropas, :action => :show, id: guardarropa.id }, { class: "fa fa-eye no-underline"} %>
-      <%= link_to "", guardarropa, method: :delete, :class =>"fa fa-trash", data: { confirm: '¿Está seguro que desea borrar el guardarropa?' } %>
-    </div>
-  </div>
-</div>
+ <%= link_to guardarropa.nombre, { :controller => :guardarropas, :action => :show, id: guardarropa.id }, { class: "guardarropa-li-unit"} %>
+ <div class="guardarropa-actions-icons">
+        <%= link_to "", { :controller => :guardarropas, :action => :edit, id: guardarropa.id}, { class: "fa fa-pencil fa-fw"} %>
+        <%= link_to "", guardarropa, method: :delete, :class =>"fa fa-trash", data: { confirm: '¿Estás seguro de que queres borrar el guardarropa?' } %>
+ </div>
