--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,13 @@
     </ul>
   </nav>
 
-  <div class="weatherWidget" ></div>
+<!--  <div class="weatherWidget" ></div>-->
+
+  <section class="ajax-section">
+    <div class="container">
+      <ul class="cities"></ul>
+    </div>
+  </section>
 </header>
 
 <!-----MAIN BANNER----->
