--- a/app/views/guardarropas/_header.html.erb
+++ b/app/views/guardarropas/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <%= link_to image_tag("/assets/logo2.png"), "/" %>
+  <%= link_to image_tag("public/logo2.png"), "/" %>
   <div class="weatherWidget" ></div>
 
 
