--- a/app/views/prendas/index.html.erb
+++ b/app/views/prendas/index.html.erb
@@ -10,7 +10,7 @@
           <% if prenda.imagen.attached? %>
               <%= link_to image_tag(prenda.imagen), prenda %>
             <%else %>
-              <%= link_to image_tag("/assets/placeholder.png"), prenda%>
+              <%= link_to image_tag("public/placeholder.png"), prenda%>
           <% end %>
           <h3><%= link_to prenda.descripcion, prenda%></h3>
         </li>
