--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <header class="main-header">
-  <%= link_to image_tag("public/logo2.png"), "/" %>
+  <%= link_to image_tag("/logo2.png"), "/" %>
   <!-----NAV BAR----->
   <input type="checkbox" id="open-nav"> <!-- al tocarlo, se selecciona la checkbox.en css escribo#abre-nav:checked ~.main-nav  le digo asi que le de estilo al HERMANO de abre nav que es .main-nav. -->
 
