--- a/app/views/atuendos/_header.html.erb
+++ b/app/views/atuendos/_header.html.erb
@@ -1,4 +1,4 @@
 <header class="main-header">
-  <%= link_to image_tag("public/logo2.png"), "/" %>
+  <%= link_to image_tag("/logo2.png"), "/" %>
   <div class="weatherWidget" ></div>
 </header>
