--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -25,24 +25,23 @@ img {
 .main-header {
   display: flex;
   background-color: #4e0d3a;
+  width: 30%;
 }
 
 .logo-2-img{
-  width: 50%;
-  padding: 10px 5px 5px 19%;
+  width: 70%;
+  padding: 10px 5px 5px 31%;
 
 }
 
 .navigation-right{
   font-size: 3em;
-  //margin: 3%;
-  padding: 13px 5px 5px 21%;
+  padding: 0px 5px 5px 21%;
 
 }
 
 .navigation-right a{
   color: #e30425;
-
 }
 
 .main-nav {
@@ -95,7 +94,7 @@ img {
   flex: 1 1 0%;
   justify-content: flex-end;
   display: flex;
-  padding: 15px 10px 5px 20px;
+  padding: 0px 255px 10px 20px;
 }
 
 .weatherWidget {
@@ -509,20 +508,20 @@ img {
 @media (min-width:650px) {
 
   .logo-2-img{
-    width: 41%;
-    padding: 23px 5px 10px 20%;
+    width: 63%;
+    padding: 23px 5px 10px 38%;
 
   }
 
   .navigation-right{
-    font-size: 5.7em;
+    font-size: 4.3em;
     //margin: 3%;
-    padding: 29px 5px 5px 31%;
+    padding: 0px 5px 5px 31%;
 
   }
   .toggle-nav {
-    font-size: 5.7em;
-    padding: 33px 115px 5px 35px;
+    font-size: 4.3em;
+    padding: 0px 550px 25px 35px;
   }
   .banner {
     display:block; /*para sacar el display none, puedo poder cualquier otro valor. pongo block porque quiero que se comporte como un bloque*/
@@ -650,21 +649,23 @@ img {
 
 
   .logo-2-img{
-    width: 22%;
-    padding: 21px 5px 5px 12%;
+    width: 55%;
+    padding: 21px 5px 5px 43%;
 
   }
 
+  .main-header{
+    width: auto;
+  }
   .navigation-left{
     width: 45%;
-    padding-left: 0%;
+    padding-left: 3%;
     padding-top: 1%;
     padding-bottom: 1%;
   }
   .navigation-right{
-    font-size: 3.5em;
-    padding: 21px 33px 5px 41%;
-    line-height: 50%;
+    font-size: 4em;
+    padding: 30px 33px 0px 85%;
 
   }
   .toggle-nav {
@@ -673,7 +674,7 @@ img {
   }
 
   .main-nav {
-    width: 100%;
+    width: 500%;
     height: auto; /*como no sabemos cuanto quiero que tenga le pongo height.auto*/
     position: static; /*limpio y le digo que la position que tenia antes, ya no la tiene porque sino la hereda*/
     left: 0;
@@ -686,8 +687,8 @@ img {
   .main-nav li {
     float: left;
     width: 15%;
-    margin: 0 3% 1% 0%;
-    font-size: 11px;
+    margin: 0 3% 0% 0%;
+    font-size: 13px;
   }
 
   .main-nav a {
