--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>QuéMePongo</title>
+    <title>Shrine</title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,6 +17,57 @@
   </head>
 
   <body>
+
+  <div class="logo-2-img">
+    <%= link_to image_tag("/logo2.png"), "/" %>
+  </div>
+
+  <header class="main-header">
+
+    <div class="navigation-left">
+      <!-----NAV BAR----->
+      <input type="checkbox" id="open-nav"> <!-- al tocarlo, se selecciona la checkbox.en css escribo#abre-nav:checked ~.main-nav  le digo asi que le de estilo al HERMANO de abre nav que es .main-nav. -->
+
+      <label for="open-nav" class="toggle-nav">
+        <i class="fa fa-bars" aria-hidden="true"></i>
+      </label>
+
+
+      <nav class="main-nav">
+        <ul class="nav">
+          <li>
+            <!--para poner un botoncito para cerrar. abre-nav es un id!!!!-->
+            <!--cuando yo apreto el boton, este se deselecciona. y se cierra la cosa-->
+            <label class="close" for="open-nav">
+              <i class="fa fa-times" aria-hidden="true"></i>
+            </label>
+          </li>
+          <li><a href="/">Inicio</a></li>
+          <li><a href="#about"><span>Shrine</span></a></li>
+          <li><a href="#team">Equipo</a></li>
+          <li><a href="#contact">Contacto</a></li>
+
+        </ul>
+      </nav>
+    </div>
+
+    <div class="navigation-right">
+      <label class="user-icon">
+        <a href="/login"><i class="fa fa-user-circle" aria-hidden="true"></i>
+        </a>
+      </label>
+
+    </div>
+
+
+    <!--  <div class="weatherWidget" ></div>-->
+
+    <!--  <section class="ajax-section">-->
+    <!--    <div class="container">-->
+    <!--      <ul class="cities"></ul>-->
+    <!--    </div>-->
+    <!--  </section>-->
+  </header>
     <%= yield %>
   <!-----FOOTER----->
   <footer class="main-footer">
@@ -47,7 +98,7 @@
       <h4>|</h4>
       <a>Políticas de Privacidad</a>
     </div>
-    <p> © 2021, QueMePongo </p>
+    <p> © 2021, Shrine </p>
     <img src="/assets/logo2.png" alt="logotipo" class="footer-logo">
   </footer>
 
