--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,28 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
-
-<table>
-  <thead>
+<div class=" margin-container">
+  <div class="row center p-4">
+    <p id="notice"><%= notice %></p>
+    <h1>Usuarios Registrados</h1>
+  </div>
+  <table class="table">
     <tr>
-      <th>Email</th>
-      <th colspan="3"></th>
+      <th scope="col">Email</th>
+      <th scope="col">Guardarropas</th>
+      <th scope="col">Prendas</th>
+      <th scope="col">Fecha de registro</th>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
+    <% @users.each do |u| %>
       <tr>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=u.email%></td>
+        <td><%= Guardarropa.where(user: u).count %> </td>
+        <%sum=0%>
+        <% Guardarropa.where(user: u).each do |g| %>
+          <%sum= sum + Prenda.where(guardarropa_id: g.id).count %>
+        <% end %>
+        <td><%=sum%></td>
+        <td><%=u.created_at%></td>
       </tr>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
+  </table>
+</div>
 <%= link_to 'New User', new_user_path %>
